[project]
name = "pinthepiece"
version = "0.1.0"
description = "A robust MCP Server for managing and organizing notes with features like versioning, atomic operations, hierarchical storage, and comprehensive search capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.1",
    "uvicorn>=0.27.0",
    "fastapi>=0.110.0",
]
[[project.authors]]
name = "Priscila Saboia Moreira"
email = "priscilasaboia@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
pinthepiece = "pinthepiece:main"

